tests/golden/custom-resources-values.yaml
nodes:
  count: 10

resources:
  limits:
    cpu: "2"
    memory: "2Gi"
  requests:
    cpu: "500m"
    memory: "512Mi"
